Code cleanup (#7)
* Refactoring cook logic, creating separate thread for each proeficiency point.

* commit

* Transitioning cooking apparatus on separate threads.

* Making check order item method sync.

* Changing the docker file

* Code cleanup.

Co-authored-by: Moisei Liviu <liviu.moisei@amdaris.com>